package zmq_if;  
  
message Task{  
	required String hash = 1;
	required String rel_path = 2;
	required bytes task_descriptor = 3;
	required bytes target_addition = 4;
	
}  
